--- a/css/style_article_template.css
+++ b/css/style_article_template.css
@@ -1,5 +1,7 @@
 body {
     background-color: #edf2f4;
+    margin: 0;
+    overflow-x: hidden;
 }
 main {
     width: 1000px;
@@ -146,15 +148,32 @@ h1 {
     font-size: 20px;
 }
 .article-heading-without-counter-2 {
-    height: 40px;
-    padding: 10px 40px 25px;
+    height: max-content;
     border-bottom: 1px solid gray;
     cursor: pointer;
     text-transform: uppercase;
 }
-.article-heading-without-counter-2:hover {
-    background-color: rgba(255,255,255,.5);
-}
 .article-heading-without-counter-2:hover h2 {
     color: #d90429;
+}
+.footer-2 {
+    width: 80%;
+    margin: 0 auto 20px;
+    color: gray;
+}
+/*МЕНЮ НАВИГАЦИИ*/
+.burger-btn {
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/icons/menu.png);
+    background-position: center;
+    background-size: contain;
+    border: none;
+    position: absolute;
+    left: calc(100% - 80px);
+    top: 40px;
+    cursor: pointer;
+}
+.dropdown-menu {
+    display: none;
 }
