--- a/css/style_about_me.css
+++ b/css/style_about_me.css
@@ -42,7 +42,14 @@
 #description ul {
     list-style-type: square;
 }
-
+.footer-1 {
+    width: 90vw;
+    text-align: center;
+    font-size: larger;
+    padding: 20px 0;
+    border-top: 1px gray solid;
+    margin: 20px auto;
+}
 
 
 /*ВТОРАЯ ЧАСТЬ*/
