--- a/css/style_galery.css
+++ b/css/style_galery.css
@@ -20,6 +20,14 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+.footer-1 {
+    width: 90vw;
+    text-align: center;
+    font-size: larger;
+    padding: 20px 0;
+    border-top: 1px gray solid;
+    margin: 20px auto;
+}
 /*GALEREYA*/
 .flex {
     display: flex;
